# LoCoder

./: .gitignore  .locoder.toml  .locoder.toml.example  CLAUDE.md  README.md  debug-notes.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/workflows/: release.yml
.planning/: BASIC_SETUP.md
.planning/phases/: 00_overview.md  01_infrastructure.md  02_model_strategy.md  03_agent_architecture.md  04_framework_stack.md  05_memory_and_context.md  06_performance_optimization.md  07_post_change_verification.md  08_code_execution_safety.md  09_multi_agent_extensions.md
locoder/: __main__.py  constants.py
locoder/agent/: dispatch.py  graph.py  history.py  llm.py  loop.py  prompts.py  rag.py  sandbox.py  schema.py  tools.py  verify.py
locoder/cli/: cmd_models.py  cmd_registry.py  cmd_setup.py  cmd_start.py  main.py
locoder/config/: manager.py
locoder/data/: registry.json
locoder/hardware/: detect.py
locoder/models/: client.py  downloader.py  registry.py  selector.py
locoder/server/: install.py  launcher.py
tests/: test_agent_schema.py  test_agent_tools.py  test_client.py  test_config_manager.py  test_hardware.py  test_history.py  test_launcher.py  test_rag.py  test_registry.py  test_sandbox.py  test_selector.py
